manifests/development/caption-this-celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
  labels:
    app: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: gcr.io/dev-airlock-311420/game:v1.2
          command: ["/bin/sh"]
          args: ["-c", "./celery.sh"]
          resources:
              requests:
                memory: "500Mi"
                cpu: "200m"
              limits:
                memory: "1Gi"
                cpu: "400m"
