manifests/development/caption-this-memegen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memegen-deployment
  labels:
    app: memegen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memegen
  template:
    metadata:
      labels:
        app: memegen
    spec:
      volumes:
        - name: assets-volume
          persistentVolumeClaim:
            claimName: memegen-pvc
      containers:
        - name: memegen
          image: gcr.io/dev-airlock-311420/memegen:v1.1
          command:
            - "python"
            - "run.py"
          volumeMounts:
            - mountPath: "/usr/src/app/images"
              name: assets-volume
          ports:
            - containerPort: 5000
          resources:
              requests:
                memory: "500Mi"
                cpu: "300m"
              limits:
                memory: "1Gi"
                cpu: "600m"
